--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ classifiers =
     Natural Language :: English
     Topic :: Multimedia :: Sound/Audio
     Typing :: Typed
-license = MIT License
+license = MIT
 description = Keep your music close and your favorites closer
 long_description = file: README.md, LICENSE
 long_description_content_type="text/markdown",
