--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = tunecapsule
-version = 0.6.2
+version = 0.6.3a1
 url = https://github.com/IdmFoundInHim/tunecapsule
 author = IdmFoundInHim
 author_email = idmfoundinhim@gmail.com
