Bugfix version increase
Targets crash when an artist's name changes

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,25 +1,25 @@
 [metadata]
 name = tunecapsule
-version = 0.6.3a1
+version = 0.6.4
 url = https://github.com/IdmFoundInHim/tunecapsule
 author = IdmFoundInHim
 author_email = idmfoundinhim@gmail.com
 keywords = playlists music rating ranking backup library liked
-classifiers = 
+classifiers =
     Programming Language :: Python :: 3.10
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
-    Development Status :: 2 - Pre-Alpha
+    Development Status :: 3 - Alpha
     Natural Language :: English
     Topic :: Multimedia :: Sound/Audio
     Typing :: Typed
 license = MIT
 description = Keep your music close and your favorites closer
 long_description = file: README.md, LICENSE
-long_description_content_type="text/markdown",
+long_description_content_type = "text/markdown",
 
 [options]
-install_requires =  # Licenses
+install_requires = # Licenses
     streamsort >=0.2.0  # MIT
     spotipy ~=2.15  # MIT
     more-itertools >=8.0.0  # MIT
